// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CourseRepository tests Happy paths should return a course by name 1`] = `
Course {
  "name": "Test",
  "students": [],
}
`;

exports[`CourseRepository tests Happy paths should return all courses 1`] = `
[
  Course {
    "name": "Java",
    "students": [],
  },
  Course {
    "name": "SQL",
    "students": [],
  },
  Course {
    "name": "Docker",
    "students": [],
  },
]
`;
